--- a/front-end-pro-01/homework-25/byu.html
+++ b/front-end-pro-01/homework-25/byu.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="order">
+      <ul class="order-list"></ul>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
