--- a/front-end-pro-01/homework-25/index.html
+++ b/front-end-pro-01/homework-25/index.html
@@ -70,7 +70,7 @@
             <label for="comment">Коментар до замовлення:</label>
             <textarea id="comment" name="comment" rows="4" cols="50"></textarea
             ><br />
-            <button id="byuBtn" type="button">Купити</button>
+            <button id="byuBtn" type="submit">Купити</button>
           </form>
         </div>
       </div>
