--- a/front-end-pro-01/homework-26/index.html
+++ b/front-end-pro-01/homework-26/index.html
@@ -100,8 +100,9 @@
           >
         </div>
       </div>
-      <button type="button" id="btn" class="btn">Зберегти</button>
+      <button type="required" id="btn" class="btn">Зберегти</button>
     </form>
+    <table id="table" class="hide"></table>
     <script src="./index.js"></script>
   </body>
 </html>
